Agrego 134 fotos a la carpeta fotos_venta

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 <div id="lightbox" class="oculto">
   <img id="lightbox-img" src="" alt="Zoom" />
 </div>
+  <!-- Botón de WhatsApp -->
+<a href="https://wa.me/+56991805016" target="_blank" id="whatsapp-btn">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
+</a>
+
 
 </body>
 </html>
